--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
+<!DOCTYPE html>
+<html>
+   <head>
+      <title>HTML Meta Tag</title>
 <meta http-equiv="Refresh" content="2; url=public/index.html">
+</head>
+<body>
+   <p>Hello HTML5!</p>
+</body>
+</html>
