--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <title>HTML Meta Tag</title>
-<meta http-equiv="Refresh" content="2; url=public/index.html">
+<meta http-equiv="Refresh" content="2; url=public/src/index.html">
 </head>
 <body>
    <p>Hello HTML5!</p>
